# experiments

./: README.md
Underwriting/: .coveragerc  .dockerignore  .editorconfig  .gitignore  .isort.cfg  .pylintrc  Dockerfile  mypy.ini  pylama.ini  pyproject.toml
Underwriting/examples/output/02_parallel_asyncio/submission-02/Step-02-extract-msg-if-any-msg/Syn7913121 Prem _msg/emails/: 68db5c45-42d1-4887-adf2-86636fa68af7.json
Underwriting/examples/underwriting_submission_receive_task_01_sequential/: __main__.py  normal_sequential_implementation.py
Underwriting/examples/underwriting_submission_receive_task_02_parallel_asyncio/: __init__.py  __main__.py  parallel_asyncio_implementation.py
Underwriting/examples/underwriting_submission_receive_task_03_baaf/operations/unzip/: __init__.py  unzip_operation.py
async_process/: pyproject.toml
async_process/async_process/: __main__.py  op_1.py
context_manager_exit/: context_manager_exit_example.py  data.txt
entity_extraction_client/: entity_extraction_client.py  pyproject.toml
file_to_b64/: __init__.py  convert.py  pyproject.toml
file_to_b64/Synthetics/: template-1_synthetic_1.pdf.b64  template-1_synthetic_2.pdf.b64
generator/: example_of_generator_functions.py
json_schema_validation/: pyproject.toml  test_schemas.py
json_schema_validation/schemas/: date_schema.json  enum_schema.json  int_schema.json
pdf_to_pil_image/: convert_pdf_to_image.py  fix_for_image_loader.py  pyproject.toml
simlinks/: README.md
