[tool.poetry]
name = "eai-ai-application-framework-sdk"
version = "0.1.0"
description = "SDK for the EAI AI Application Framework"
authors = ["Marc Boissonneault <marc.boissonneault@elementai.com>"]

[[tool.poetry.source]]
name = "eai-core"
url = "https://pypi.elmt.io/repo/eai-core"
verify_ssl = true

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
seed-isort-config = "^1.9"
mypy = "^0.701.0"
pylama = "^7.7"
pycodestyle = "^2.5"
pylint = "^2.3"
isort = {version = "^4.3",extras = ["pyproject"]}
black = "19.3b0"

[tool.black]
line-length = 160
py36 = true

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
known_standard_library = "dataclasses"
known_third_party = "pytest,structlog"
line_length = 160
multi_line_output = 3
not_skip = "__init__.py"
skip = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
