[tool.poetry]
name = "async_process"
version = "0.1.0"
description = ""
authors = ["Marc Boissonneault <marc.boissonneault@elementai.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.3"
pylama = "^7.7"
mypy = "^0.711.0"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
