[tool.poetry]
name = "entity_extraction_client"
version = "0.1.0"
description = ""
authors = ["Marc Boissonneault <marc.boissonneault@elementai.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
