[tool.poetry]
name = "json_schema_validation"
version = "0.1.0"
description = ""
authors = ["Marc Boissonneault <marc.boissonneault@elementai.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jsonschema = { version = "^3.0", extras = [ "format" ] }

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
